Fix: change edit modal text color on dark mode

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -70,7 +70,9 @@ body {
     #table span,
     #table td,
     #table th,
-    #table-pagination {
+    #table-pagination,
+    .ql-editor span,
+    .ql-editor strong {
       color: white !important;
     }
   }
